--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ bag==5.0.1
 beautifulsoup4==4.12.3
 blinker==1.8.2
 boto3==1.36.2
+gunicorn==23.0.0
 botocore==1.36.2
 cachetools==5.4.0
 certifi==2024.7.4
